# filter-rs

./: .todo  Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: it.sh  lines.sh  lorem-ipsum.txt  read.sh
src/: action.rs  app.rs  child.rs  command.rs  double_linked_list.rs  filter_scroll_view.rs  filter_view.rs  lines.rs  main.rs  main_pane.rs  new_scroll.rs  pages.rs  rc_str.rs  scroll_view.rs  search_pane.rs  state.rs  sync_child.rs
