[package]
name = "filter"
version = "0.0.6"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
clap = "4.5.21"
crossterm = "0.28.1"
env_logger = "0.11.5"
log = "0.4.22"
rand = "0.8.5"
ratatui = "0.29.0"
rayon = "1.10.0"
regex = "1.11.1"
shellwords = "1.1.0"
textwrap = "0.16.1"
thiserror = "2.0.3"
unicode-linebreak = "0.1.5"
unicode-width = "0.2.0"


[profile.release]
strip = true
opt-level = 3
panic = "abort"
lto = true
codegen-units = 1
