[package]
name = "filter-rs"
version = "0.0.7"
edition = "2021"
license = "MIT"
description = "TUI for live log filtering and searching"
repository = "https://github.com/ash-hashtag/filter-rs"
keywords = ["log", "filter", "tui", "cli"]


[[bin]]
name = "filter"
path = "src/main.rs"


[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
crossterm = "0.29.0"
env_logger = "0.11.10"
log = "0.4.29"
rand = "0.10.0"
ratatui = "0.30.0"
rayon = "1.11.0"
regex = "1.12.3"
shellwords = "1.1.0"
textwrap = "0.16.2"
thiserror = "2.0.18"
unicode-linebreak = "0.1.5"
unicode-width = "0.2.2"


[profile.release]
strip = true
opt-level = 3
panic = "abort"
lto = true
codegen-units = 1
